@@ -1,23 +1,0 @@
-# pithy Plugin #
-
-Pithy is a fast codec originally based on Snappy.
-
-For more information about Pithy, see https://github.com/johnezang/pithy
-
-## Codecs ##
-
-- **pithy** — Raw Pithy data.
-
-## Options ##
-
-### Compression Only ###
-
-- **level** (integer, 0 - 9), default 3 — Compression level.  Higher
-  values compress the data more but require more processing time.
-
-## License ##
-
-The pithy plugin is licensed under the [MIT
-License](http://opensource.org/licenses/MIT), and Pithy is licensed
-under a [3-clause BSD
-license](http://opensource.org/licenses/BSD-3-Clause).
