@@ -1,3 +1,0 @@
-license=BSD3
-
-[pithy]
